src/objects/Section_Contact__c.object
<CustomObject>
    <description>Contacts to Section junction object</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Section_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID for Reference</description>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Business User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Section_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Section Contact</label>
    <nameField>
        <displayFormat>SECCON{000000}</displayFormat>
        <label>Section Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Section Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>